src/test/deca/context/invalid/ContextSansObjet/Identification/IdentificationBoolAssignFloat.deca
//Description :
//	affectation d'un float à une variable définie comme boolean
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	boolean x = 1.0;
}